* Sun Jan 15 2011 Dan Prince <dan.prince@rackspace.com> - 2.8.2
 -Check if known_hosts exists before trying to edit it
 -Add SERVER_GROUP_JSON option to create task.
 -Updates to support Openstack. Ids for images, flavors and servers are
  treated as strings.

* Tue Dec 8 2011 Dan Prince <dan.prince@rackspace.com> - 2.8.1
  - Add JSON option for chef:install task to specify custom nodes.json files.
  - Don't re-add the notification handler to the config file if it already
    exists.
  - Add support for cloning git:// cookbook repo URL's.
  - Add restart check for Rabbit which sometimes fails or is slow to start.

* Tue Nov 8 2011 Dan Prince <dan.prince@rackspace.com> - 2.8.0
  - Add chef_interval option to chef_installer.conf.
  - Add RESTART_ON_FAILURE and RESTART_TIMEOUT options to poll_clients task.

* Sun Nov 6 2011 Dan Prince <dan.prince@rackspace.com> - 2.7.2
  - Support for configuring and starting Chef 0.10 when preinstalled.

* Thu Oct 20 2011 Dan Prince <dan.prince@rackspace.com> - 2.7.1
  - Support for image snapshots where chef is pre-installed.

* Wed Oct 5 2011 Dan Prince <dan.prince@rackspace.com> - 2.7.0
  - Support for Fedora 15, Ubuntu 11.04, and Debian 6.0.

* Thu Jun 23 2011 Dan Prince <dan.prince@rackspace.com> - 2.6.1
  - Use /sbin/ifconfig instead of ifconfig when testing for tap/tun.

* Tue Jun 21 2011 Dan Prince <dan.prince@rackspace.com> - 2.6.0
  - Update to support images that have Chef preinstalled.
  - Skip missing nodes when trying to install Chef.
  - Added vpn_connection_type option w/ support for using command line
    openvpn or network_manager.
  - Add support for 'udp' VPN protocol. Default protocol is 'tcp'.
    UDP support requires Cloud Servers VPC 2.2.0 or greater.

* Thu Apr 24 2011 Dan Prince <dan.prince@rackspace.com> - 2.5.2
  - Raise an error in the chef:poll_clients task if a timeout occurs.
  - Use CDN to install Chef for Ubuntu.

* Thu Apr 16 2011 Dan Prince <dan.prince@rackspace.com> - 2.5.1