@@ -5,7 +5,7 @@
 
 Gem::Specification.new do |s|
   s.name = %q{chef-vpc-toolkit}
-  s.version = "2.8.2"
+  s.version = "2.8.3"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Dan Prince"]
