@@ -1,3 +1,6 @@
+* Wed Feb 22 2012 Jon Hartman <jon.hartman@rackspace.com> - 2.8.3
+- Forked and updated for CentOS 5.6
+
 * Sun Jan 15 2011 Dan Prince <dan.prince@rackspace.com> - 2.8.2
  -Check if known_hosts exists before trying to edit it
  -Add SERVER_GROUP_JSON option to create task.
